force-app/main/default/objects/Additional_Partners__c/Additional_Partners__c.object-meta.xml
<CustomObject>
    <label>Additional Partner</label>
    <nameField>
        <displayFormat>Additional Partner-{0000}</displayFormat>
        <label>Additional Partners Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Partners</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>