force-app/main/default/objects/Additional_Partners__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Additional Partners</relationshipLabel>
    <relationshipName>Additional_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>