force-app/main/default/objects/Additional_Partners__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Additional Partners</relationshipLabel>
    <relationshipName>Additional_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>