force-app/main/default/objects/Additional_Partners__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Partner_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Additional Partners_Contact</relationshipLabel>
    <relationshipName>Additional_Partners_Contact</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>