force-app/main/default/objects/Additional_Partners__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Additional Partners (Partner Name)</relationshipLabel>
    <relationshipName>Additional_Partner_Partner_Name</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>