force-app/main/default/objects/Additional_Partners__c/fields/Partner_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sourced__c</fullName>
    <label>Partner Sourced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Marketing Attributed</fullName>
            </value>
            <value>
                <fullName>Partner Team Attributed</fullName>
            </value>
            <value>
                <fullName>Rep Attributed</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>